local_cluster/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2025-05-12T14:32:49Z","generation":7,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"27273","uid":"79d985b8-20a8-4814-89df-77c82a2453be"},"spec":{"progressDeadlineSeconds":600,"replicas":2,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge": [...]
  creationTimestamp: "2025-05-12T14:32:49Z"
  generation: 8
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "27438"
  uid: 79d985b8-20a8-4814-89df-77c82a2453be
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: synergychat-web-configmap
        image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-05-12T14:32:49Z"
    lastUpdateTime: "2025-05-12T16:37:21Z"
    message: ReplicaSet "synergychat-web-fbdb4bfdb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-05-12T16:41:11Z"
    lastUpdateTime: "2025-05-12T16:41:11Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 8
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
