local_cluster/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: synergychat-api
  type: ClusterIP
  ports:
  - name: api-service
    protocol: TCP
    port: 80
    targetPort: 8080
