local_cluster/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: default
spec:
  selector:
    app: synergychat-crawler
  type: ClusterIP
  ports:
  - name: crawler-service
    protocol: TCP
    port: 80
    targetPort: 8080
